[gd_scene load_steps=20 format=1]

[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/MainMenu/Panel.gd" type="Script" id=2]
[ext_resource path="res://Menus/MainMenu/Resources/buttonsPanel.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Menus/MainMenu/Resources/ButtonHoverStyleBoxFlat.tres" type="StyleBox" id=5]
[ext_resource path="res://Menus/MainMenu/Resources/ButtonPressedStyleBoxFlat.tres" type="StyleBox" id=6]
[ext_resource path="res://Menus/MainMenu/Resources/ButtonFocusStyleBoxFlat.tres" type="StyleBox" id=7]
[ext_resource path="res://Fonts/courrier.fnt" type="BitmapFont" id=8]
[ext_resource path="res://Menus/MainMenu/MainMenuButtons.gd" type="Script" id=9]
[ext_resource path="res://Fonts/title.fnt" type="BitmapFont" id=10]
[ext_resource path="res://Fonts/calligraph.fnt" type="BitmapFont" id=11]
[ext_resource path="res://Fonts/copyright.fnt" type="BitmapFont" id=12]
[ext_resource path="res://Menus/MainMenu/Resources/line.png" type="Texture" id=13]

[sub_resource type="GDScript" id=1]

script/source = ""

[sub_resource type="Theme" id=2]

script/script = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.527344, 0.0247192, 0.0247192, 0.588235 )
light_color = Color( 0.52549, 0.0235294, 0.0235294, 1 )
dark_color = Color( 0.52549, 0.0235294, 0.0235294, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 0.306 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="Control" type="Control"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 360.0
margin/top = 540.0
margin/right = -360.0
margin/bottom = -542.0
script/script = ExtResource( 1 )

[node name="BannerPanel" type="Panel" parent="."]

visibility/behind_parent = true
rect/min_size = Vector2( 720, 460 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -100.0
margin/top = 500.0
margin/right = 820.0
margin/bottom = 960.0
custom_styles/panel = SubResource( 3 )
script/script = ExtResource( 2 )

[node name="MainMenuPanel" type="Panel" parent="BannerPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 15.0
margin/right = 710.0
margin/bottom = 445.0
custom_styles/panel = SubResource( 4 )
custom_styles/panelnc = SubResource( 5 )

[node name="Career" type="Button" parent="BannerPanel/MainMenuPanel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 180.0
margin/right = -230.0
margin/bottom = 124.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 1, 0.887085, 0.277344, 1 )
custom_colors/font_color_pressed = Color( 0.628906, 0.628906, 0.628906, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = true
align = 0
script/script = ExtResource( 9 )

[node name="Quit" type="Button" parent="BannerPanel/MainMenuPanel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = -120.0
margin/right = -230.0
margin/bottom = -175.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 1, 0.887085, 0.277344, 1 )
custom_colors/font_color_pressed = Color( 0.628906, 0.628906, 0.628906, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = true
align = 0
script/script = ExtResource( 9 )

[node name="QuitMenuPanel" type="Panel" parent="BannerPanel"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 15.0
margin/right = 710.0
margin/bottom = 445.0
custom_styles/panel = SubResource( 6 )

[node name="ConfirmLabel" type="Label" parent="BannerPanel/QuitMenuPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 60.0
margin/right = 497.0
margin/bottom = 163.0
custom_fonts/font = ExtResource( 8 )
custom_constants/line_spacing = 25
text = "Really want to quit ?"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Yes" type="Button" parent="BannerPanel/QuitMenuPanel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 212.5
margin/top = 24.0
margin/right = -181.5
margin/bottom = -28.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 1, 0.887085, 0.277344, 1 )
custom_colors/font_color_pressed = Color( 0.628906, 0.628906, 0.628906, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Yes"
flat = true
script/script = ExtResource( 9 )

[node name="No" type="Button" parent="BannerPanel/QuitMenuPanel"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 212.5
margin/top = -36.0
margin/right = -181.5
margin/bottom = -88.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_hover = Color( 1, 0.887085, 0.277344, 1 )
custom_colors/font_color_pressed = Color( 0.628906, 0.628906, 0.628906, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "No"
flat = true
script/script = ExtResource( 9 )

[node name="Title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 9.0
margin/right = 719.0
margin/bottom = 137.0
custom_fonts/font = ExtResource( 10 )
text = "Example"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Subtitle" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 420.0
margin/top = 135.0
margin/right = 720.0
margin/bottom = 225.0
custom_fonts/font = ExtResource( 11 )
text = "Bug"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Copyright" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 360.0
margin/top = -479.0
margin/right = -360.0
margin/bottom = -510.0
custom_fonts/font = ExtResource( 12 )
text = "Area_signal bugs"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Line" type="Sprite" parent="."]

transform/pos = Vector2( 436.939, 141.817 )
texture = ExtResource( 13 )

[connection signal="pressed" from="BannerPanel/MainMenuPanel/Career" to="BannerPanel/MainMenuPanel/Career" method="_on_Career_pressed"]

[connection signal="pressed" from="BannerPanel/MainMenuPanel/Quit" to="BannerPanel/MainMenuPanel/Quit" method="_on_Quit_pressed"]

[connection signal="pressed" from="BannerPanel/QuitMenuPanel/Yes" to="BannerPanel/QuitMenuPanel/Yes" method="_on_Yes_pressed"]

[connection signal="pressed" from="BannerPanel/QuitMenuPanel/No" to="BannerPanel/QuitMenuPanel/No" method="_on_No_pressed"]


